@@ -1,5 +1,10 @@
 2005-02-01  Sam Steingold  <sds@gnu.org>
 
+	* spvw.d (my_realloc): new function for modules
+	* genclisph.d (my_realloc): export
+
+2005-02-01  Sam Steingold  <sds@gnu.org>
+
 	* modules/syscalls/calls.c (getrlimit_arg): do not define unless
 	HAVE_GETRLIMIT is defined
 
